[gd_scene load_steps=13 format=3 uid="uid://c4mci1du1kq6s"]

[ext_resource type="Texture2D" uid="uid://v1aucw8saw2y" path="res://Items/Sprites/items.png" id="1_b3iil"]
[ext_resource type="Script" uid="uid://xt7wjk4r5ujs" path="res://GUI/shop_menu/shop_menu.gd" id="1_t0q3b"]
[ext_resource type="PackedScene" uid="uid://njthlpyxv225" path="res://GUI/shop_menu/shop_item_button.tscn" id="2_mswg8"]
[ext_resource type="FontFile" uid="uid://e86m1rs0yak4" path="res://GUI/fonts/Abaddon Light.ttf" id="3_dt4po"]
[ext_resource type="FontFile" uid="uid://ccvatdmcvqh04" path="res://GUI/fonts/m5x7.ttf" id="4_lv53b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lv53b"]
atlas = ExtResource("1_b3iil")
region = Rect2(0, 0, 32, 32)

[sub_resource type="Animation" id="Animation_dt4po"]
resource_name = "not_enough_gems"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(926, 64), Vector2(904, 64), Vector2(944, 64), Vector2(912, 64), Vector2(926, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.8247963, 0, 0.07077583, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lv53b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(926, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t0q3b"]
_data = {
&"RESET": SubResource("Animation_lv53b"),
&"not_enough_gems": SubResource("Animation_dt4po")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_yiq8o"]
atlas = ExtResource("1_b3iil")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mswg8"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_yiq8o")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_dt4po"]
atlas = ExtResource("1_b3iil")
region = Rect2(0, 0, 32, 32)

[node name="ShopMenu" type="CanvasLayer"]
layer = 3
script = ExtResource("1_t0q3b")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12835406, 0.12835406, 0.12835406, 0.503)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -226.0
offset_top = 64.0
offset_right = -63.996826
offset_bottom = 112.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_lv53b")
expand_mode = 2

[node name="GemsLabel" type="Label" parent="Control/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_dt4po")
theme_override_font_sizes/font_size = 26
text = "99999999"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Control" type="Control" parent="Control/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/PanelContainer"]
libraries = {
&"": SubResource("AnimationLibrary_t0q3b")
}

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 128.0
offset_right = 320.0
offset_bottom = 332.0
scale = Vector2(2, 2)
follow_focus = true
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ShopItemsContainer" type="VBoxContainer" parent="Control/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="ShopItemButton" parent="Control/ScrollContainer/MarginContainer/ShopItemsContainer" instance=ExtResource("2_mswg8")]
layout_mode = 2

[node name="ShopItemButton2" parent="Control/ScrollContainer/MarginContainer/ShopItemsContainer" instance=ExtResource("2_mswg8")]
layout_mode = 2

[node name="ShopItemButton3" parent="Control/ScrollContainer/MarginContainer/ShopItemsContainer" instance=ExtResource("2_mswg8")]
layout_mode = 2

[node name="ShopItemButton4" parent="Control/ScrollContainer/MarginContainer/ShopItemsContainer" instance=ExtResource("2_mswg8")]
layout_mode = 2

[node name="ShopItemButton5" parent="Control/ScrollContainer/MarginContainer/ShopItemsContainer" instance=ExtResource("2_mswg8")]
layout_mode = 2

[node name="ShopItemButton6" parent="Control/ScrollContainer/MarginContainer/ShopItemsContainer" instance=ExtResource("2_mswg8")]
layout_mode = 2

[node name="DetailsPanel" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -196.0
offset_right = 288.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_styles/panel = SubResource("StyleBoxTexture_mswg8")

[node name="Control" type="Control" parent="Control/DetailsPanel"]
layout_mode = 2

[node name="ItemImage" type="TextureRect" parent="Control/DetailsPanel/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 14.0
offset_top = 6.0
offset_right = 46.0
offset_bottom = 38.0
texture = SubResource("AtlasTexture_dt4po")
stretch_mode = 3

[node name="ItemName" type="Label" parent="Control/DetailsPanel/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 38.0
offset_right = 202.0
offset_bottom = 82.0
text = "Item Name Label "
vertical_alignment = 2
autowrap_mode = 3

[node name="ItemDescription" type="Label" parent="Control/DetailsPanel/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 86.0
offset_right = 206.0
offset_bottom = 182.0
theme_override_colors/font_color = Color(0.609375, 0.609375, 0.609375, 1)
theme_override_fonts/font = ExtResource("4_lv53b")
text = "example description"
autowrap_mode = 3

[node name="PriceLabel" type="Label" parent="Control/DetailsPanel/Control"]
layout_mode = 0
offset_left = 126.0
offset_top = 2.0
offset_right = 210.0
offset_bottom = 18.0
theme_override_colors/font_color = Color(0.609375, 0.609375, 0.609375, 1)
theme_override_fonts/font = ExtResource("4_lv53b")
text = "Purchase Price"
autowrap_mode = 3

[node name="ItemPrice" type="Label" parent="Control/DetailsPanel/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 18)
layout_mode = 0
offset_left = 74.0
offset_top = -2.0
offset_right = 110.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("4_lv53b")
theme_override_font_sizes/font_size = 20
text = "999"
vertical_alignment = 2
autowrap_mode = 3

[node name="ItemHeldCount" type="Label" parent="Control/DetailsPanel/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 18)
layout_mode = 0
offset_left = 74.0
offset_top = 18.0
offset_right = 110.0
offset_bottom = 36.0
theme_override_fonts/font = ExtResource("4_lv53b")
theme_override_font_sizes/font_size = 20
text = "999"
vertical_alignment = 2
autowrap_mode = 3

[node name="InventoryCountLabel" type="Label" parent="Control/DetailsPanel/Control"]
layout_mode = 0
offset_left = 126.0
offset_top = 22.0
offset_right = 210.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0.609375, 0.609375, 0.609375, 1)
theme_override_fonts/font = ExtResource("4_lv53b")
text = "In Inventory"
autowrap_mode = 3

[node name="ColorRect" type="ColorRect" parent="Control/DetailsPanel/Control"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 0
offset_left = 74.0
offset_top = 15.5
offset_right = 202.0
offset_bottom = 16.5
color = Color(0.1796875, 0.1796875, 0.1796875, 1)

[node name="ColorRect2" type="ColorRect" parent="Control/DetailsPanel/Control"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 0
offset_left = 74.0
offset_top = 35.5
offset_right = 202.0
offset_bottom = 36.5
color = Color(0.1796875, 0.1796875, 0.1796875, 1)

[node name="ColorRect3" type="ColorRect" parent="Control/DetailsPanel/Control"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 0
offset_left = 2.0
offset_top = 83.5
offset_right = 202.0
offset_bottom = 84.5
color = Color(0.1796875, 0.1796875, 0.1796875, 1)

[node name="CloseButton" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 896.0
offset_top = 544.0
offset_right = 991.0
offset_bottom = 574.0
scale = Vector2(2, 2)
text = "Close"

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.73333335)
offset_left = 64.0
offset_top = 88.0
offset_right = 142.0
offset_bottom = 106.0
scale = Vector2(2, 2)
text = "Shopkeeper"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -15.0
